# kindergarden

./: .gitignore  .pylintrc  README.md  pyproject.toml  run_ci_checks.sh
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
demos/BaseMotion3D/1033071480/: 1769387642.p
demos/BaseMotion3D/104252791/: 1769387643.p
demos/BaseMotion3D/1043323488/: 1769387643.p
demos/BaseMotion3D/1081530686/: 1769387642.p
demos/BaseMotion3D/1083230752/: 1769387643.p
demos/BaseMotion3D/1097657231/: 1769304469.p  1769387642.p
demos/BaseMotion3D/1128189815/: 1769387643.p
demos/BaseMotion3D/1128755548/: 1769387642.p
demos/BaseMotion3D/1141051469/: 1769387643.p
demos/BaseMotion3D/11494707/: 1769387642.p
demos/BaseMotion3D/1162779115/: 1769387642.p
demos/BaseMotion3D/1167425778/: 1769387642.p
demos/BaseMotion3D/1190382222/: 1769387642.p
demos/BaseMotion3D/1202413557/: 1769387642.p
demos/BaseMotion3D/1227350964/: 1769387643.p
demos/BaseMotion3D/1243185673/: 1769387643.p
demos/BaseMotion3D/125773896/: 1769387644.p
demos/BaseMotion3D/1276249595/: 1769387643.p
demos/BaseMotion3D/1302740407/: 1769387642.p
demos/BaseMotion3D/1321529463/: 1769387643.p
demos/BaseMotion3D/1338284201/: 1769387643.p
demos/BaseMotion3D/1357791198/: 1769387642.p
demos/BaseMotion3D/1367864806/: 1769304469.p  1769387642.p
demos/BaseMotion3D/1389828892/: 1769387642.p
demos/BaseMotion3D/1394609702/: 1769387642.p
demos/BaseMotion3D/1396850658/: 1769387643.p
demos/BaseMotion3D/1440154963/: 1769387642.p
demos/BaseMotion3D/1440696407/: 1769387642.p
demos/BaseMotion3D/1441526998/: 1769387644.p
demos/BaseMotion3D/1444696807/: 1769387643.p
demos/BaseMotion3D/1472190200/: 1769387643.p
demos/BaseMotion3D/1478428095/: 1769387643.p
demos/BaseMotion3D/1511830742/: 1769387643.p
demos/BaseMotion3D/1533673821/: 1769387643.p
demos/BaseMotion3D/1543657888/: 1769387643.p
demos/BaseMotion3D/1545136976/: 1769387643.p
demos/BaseMotion3D/1549384411/: 1769387643.p
demos/BaseMotion3D/156652360/: 1769387643.p
demos/BaseMotion3D/1566581934/: 1769387642.p
demos/BaseMotion3D/1566923138/: 1769387642.p
demos/BaseMotion3D/161576974/: 1769387642.p
demos/BaseMotion3D/1633503581/: 1769387643.p
demos/BaseMotion3D/1640795441/: 1769387643.p
demos/BaseMotion3D/1642588603/: 1769387642.p
demos/BaseMotion3D/1690280743/: 1769387643.p
demos/BaseMotion3D/1700138881/: 1769387643.p
demos/BaseMotion3D/170294837/: 1769387644.p
demos/BaseMotion3D/172656923/: 1769387642.p
demos/BaseMotion3D/1728701086/: 1769387643.p
demos/BaseMotion3D/1746484539/: 1769387642.p
demos/BaseMotion3D/1752032165/: 1769387642.p
demos/BaseMotion3D/17790419/: 1769387642.p
demos/BaseMotion3D/1788089690/: 1769387643.p
demos/BaseMotion3D/180421576/: 1769387643.p
demos/BaseMotion3D/1804554973/: 1769387643.p
demos/BaseMotion3D/1815655708/: 1769387643.p
demos/BaseMotion3D/1818006482/: 1769387642.p
demos/BaseMotion3D/1826701614/: 1768757778.p  1769304469.p  1769387642.p
demos/BaseMotion3D/1841261662/: 1769387642.p
demos/BaseMotion3D/1853662620/: 1769387642.p
demos/BaseMotion3D/1879383516/: 1769387643.p
demos/BaseMotion3D/1882235552/: 1769387643.p
demos/BaseMotion3D/1910160578/: 1769387643.p
demos/BaseMotion3D/1911849612/: 1769387643.p
demos/BaseMotion3D/191741830/: 1769387642.p
demos/BaseMotion3D/1960127675/: 1769387642.p
demos/BaseMotion3D/2005843176/: 1769387643.p
demos/BaseMotion3D/2008052738/: 1769387642.p
demos/BaseMotion3D/2040324894/: 1769387643.p
demos/BaseMotion3D/2084654369/: 1769387642.p
demos/BaseMotion3D/2106327850/: 1769387643.p
demos/BaseMotion3D/2141492029/: 1769387643.p
demos/BaseMotion3D/266896303/: 1769387642.p
demos/BaseMotion3D/290117534/: 1769387643.p
demos/BaseMotion3D/35492826/: 1769387642.p
demos/BaseMotion3D/376383645/: 1769387642.p
demos/BaseMotion3D/377217572/: 1769387642.p
demos/BaseMotion3D/47463574/: 1769387642.p
demos/BaseMotion3D/487817217/: 1769387643.p
demos/BaseMotion3D/514041964/: 1769387643.p
demos/BaseMotion3D/546762614/: 1769387643.p
demos/BaseMotion3D/552547096/: 1769387643.p
demos/BaseMotion3D/566779217/: 1769387643.p
demos/BaseMotion3D/579362555/: 1769304469.p  1769387642.p
demos/BaseMotion3D/5880883/: 1769387642.p
demos/BaseMotion3D/595598245/: 1769387642.p
demos/BaseMotion3D/60816030/: 1769387642.p
demos/BaseMotion3D/643626383/: 1769387642.p
demos/BaseMotion3D/661058651/: 1769304469.p  1769387642.p
demos/BaseMotion3D/666239354/: 1769387643.p
demos/BaseMotion3D/679605935/: 1769387643.p
demos/BaseMotion3D/691209253/: 1769387643.p
demos/BaseMotion3D/704750836/: 1769387643.p
demos/BaseMotion3D/72124473/: 1769387642.p
demos/BaseMotion3D/721805890/: 1769387644.p
demos/BaseMotion3D/725658830/: 1769387643.p
demos/BaseMotion3D/768359333/: 1769387643.p
demos/BaseMotion3D/806201099/: 1769387643.p
docs/: maintaining.md
docs/envs/: BalanceBeam3D.md  BaseMotion3D.md  ClutteredRetrieval2D.md  ClutteredStorage2D.md  ConstrainedCupboard3D.md  DynObstruction2D.md  DynPushPullHook2D.md  DynPushT2D.md  DynScoopPour2D.md  Dynamo3D.md  Ground3D.md  Motion2D.md  Motion3D.md  Obstruction2D.md  Obstruction3D.md  Packing3D.md  PushPullHook2D.md  RBY1A3D.md  Rearrange3D.md  ScoopPour3D.md  Shelf3D.md  SortClutteredBlocks3D.md  StickButton2D.md  SweepIntoDrawer3D.md  SweepSimple3D.md  Table3D.md  TidyBot3D.md  Tossing3D.md  Transport3D.md
notebooks/: getting_started.ipynb  model_predictive_control.ipynb
pylint_plugins/: no_np_random.py
scripts/: DEMO_COLLECTION.md  collect_demos.py  download_mimiclabs_assets.py  fix_corrupted_demos.py  generate_demo_video.py  generate_env_docs.py  make_grid_video.py  make_tidybot_grid.py  view_dynamic3d_env.py
src/kinder/: __init__.py  core.py  gif_utils.py  utils.py  wrappers.py
tests/: demo_blacklist.py  test_demo_loading.py  test_deterministic_demo_replay.py  test_deterministic_demo_resettable.py  test_envs.py  test_wrappers.py
(+1424 files in other folders)
