[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kinder"
version = "0.1.0"
description = "A robotics benchmark for physical reasoning."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
   "gymnasium",
   "matplotlib",
   "numpy",
   "Pillow",
   "shapely>=2.1.2",
   "scipy>=1.14.0",
   "relational_structs@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=relational-structs",
   "prpl_utils@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=prpl-utils",
]

[project.optional-dependencies]
all = [
   "pygame>=2.5.2",
   "pymunk==7.1.0",
   "mujoco==3.2.4",
   "opencv-python>=4.9.0",
   "pybullet>=3.2.5",
   "tomsgeoms2d@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=toms-geoms-2d",
   "pybullet_helpers@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=pybullet-helpers",
]
dynamic2d = [
   "pygame>=2.5.2",
   "pymunk==7.1.0",
   "tomsgeoms2d@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=toms-geoms-2d",
]
kinematic2d = [
   "tomsgeoms2d@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=toms-geoms-2d",
]
tidybot = [
   "mujoco==3.2.4",
   "opencv-python>=4.9.0",
   "gdown",
]
kinematic3d = [
   "pybullet>=3.2.5",
   "pybullet_helpers@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=pybullet-helpers",
]
develop = [
   "pygame>=2.5.2",
   "pymunk==7.1.0",
   "mujoco==3.2.4",
   "opencv-python>=4.9.0",
   "pybullet>=3.2.5",
   "tomsgeoms2d@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=toms-geoms-2d",
   "pybullet_helpers@git+https://github.com/Princeton-Robot-Planning-and-Learning/prpl-mono.git@4be2cbf4ec361ea4e5c35d2338b5f06e69c70e46#subdirectory=pybullet-helpers",
   "black[jupyter]",
   "docformatter",
   "isort",
   "mypy",
   "pylint>=2.14.5",
   "pytest-pylint>=0.18.0",
   "pytest>=7.2.2",
   "coverage",
   "gdown",
   "scipy-stubs>=1.15.3.0",
   "types-shapely>=2.1.0",
   "nbmake",
   "ipykernel"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kinder = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*", "build", "dist", "third_party", "third-party", "__pycache__/"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "build", "dist", "third_party", "third-party", "__pycache__/"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pygame.*",
    "dill.*",
    "mujoco.*",
    "cv2.*",
    "pybullet.*",
    "gdown.*",
]
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true
source = ["src", "tests"]
