[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kindergarden"
version = "0.0.8"
description = "A robotics benchmark for physical reasoning."
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
dependencies = [
   "gymnasium",
   "matplotlib",
   "numpy",
   "Pillow",
   "dill",
   "shapely>=2.1.2",
   "scipy>=1.14.0",
   "relational_structs>=0.0.1",
   "prpl_utils>=0.0.1",
   "pygame>=2.5.2",
   "pymunk==7.1.0",
   "mujoco~=3.3.0",
   "opencv-python>=4.9.0",
   "pybullet-arm64>=3.2.8",
   "tomsgeoms2d>=0.0.1",
   "pybullet_helpers>=0.1.0",
]

[project.optional-dependencies]
dynamic2d = [
   "pygame>=2.5.2",
   "pymunk==7.1.0",
   "tomsgeoms2d>=0.0.1",
]
kinematic2d = [
   "tomsgeoms2d>=0.0.1",
]
dynamic3d = [
   "mujoco~=3.3.0",
   "opencv-python>=4.9.0",
   "gdown",
]
kinematic3d = [
   "pybullet-arm64>=3.2.8",
   "pybullet_helpers>=0.1.0",
]
develop = [
   "pygame>=2.5.2",
   "pymunk==7.1.0",
   "mujoco~=3.3.0",
   "opencv-python>=4.9.0",
   "pybullet-arm64>=3.2.8",
   "tomsgeoms2d>=0.0.1",
   "pybullet_helpers>=0.1.0",
   "black[jupyter]",
   "docformatter",
   "isort",
   "mypy",
   "pylint>=2.14.5",
   "pytest-pylint>=0.18.0",
   "pytest>=7.2.2",
   "coverage",
   "gdown",
   "scipy-stubs>=1.15.3.0",
   "types-shapely>=2.1.0",
   "nbmake",
   "ipykernel"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kinder = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*", ".venv/*", "build", "dist", "third_party", "third-party", "__pycache__/"]
split_on_trailing_comma = true

[tool.docformatter]
line-length = 88
wrap-summaries = 88
wrap-descriptions = 88

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", ".venv/*", "build", "dist", "third_party", "third-party", "__pycache__/"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "pygame.*",
    "dill.*",
    "mujoco.*",
    "cv2.*",
    "pybullet.*",
    "gdown.*",
]
ignore_missing_imports = true

[tool.coverage.run]
relative_files = true
source = ["src", "tests"]
